<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleEventScreen">

    <Button
        android:id="@+id/ScheduleEventScreen_Quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/Quit_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/ScheduleEventScreen_Text_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/ScheduleEventScreen_Title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/ScheduleEventScreen_Text_Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ScheduleEventScreen_Text_Venue"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ScheduleEventScreen_EditText_Venue"
        app:layout_constraintStart_toStartOf="@+id/ScheduleEventScreen_Text_Title"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleEventScreen_Text_Title" />

    <EditText
        android:id="@+id/ScheduleEventScreen_EditText_End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/ScheduleEventScreen_EditText_End"
        app:layout_constraintBottom_toTopOf="@+id/ScheduleEventScreen_Text_End"
        app:layout_constraintStart_toStartOf="@+id/ScheduleEventScreen_Text_Title"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleEventScreen_Text_Start" />

    <TextView
        android:id="@+id/ScheduleEventScreen_Text_Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ScheduleEventScreen_Text_Start"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ScheduleEventScreen_EditText_End"
        app:layout_constraintStart_toStartOf="@+id/ScheduleEventScreen_Text_Title"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleEventScreen_EditText_Name" />

    <EditText
        android:id="@+id/ScheduleEventScreen_EditText_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ScheduleEventScreen_EditText_Event"
        app:layout_constraintBottom_toTopOf="@+id/ScheduleEventScreen_Text_Start"
        app:layout_constraintStart_toStartOf="@+id/ScheduleEventScreen_Text_Title"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleEventScreen_Text_Name" />

    <EditText
        android:id="@+id/ScheduleEventScreen_EditText_Venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ScheduleEventScreen_EditText_Venue"
        app:layout_constraintBottom_toTopOf="@+id/ScheduleEventScreen_Text_Name"
        app:layout_constraintStart_toStartOf="@+id/ScheduleEventScreen_Text_Title"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleEventScreen_Text_Location" />

    <TextView
        android:id="@+id/ScheduleEventScreen_Text_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ScheduleEventScreen_Text_Event"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ScheduleEventScreen_EditText_Name"
        app:layout_constraintStart_toStartOf="@+id/ScheduleEventScreen_Text_Title"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleEventScreen_EditText_Venue" />

    <TextView
        android:id="@+id/ScheduleEventScreen_Text_End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ScheduleEventScreen_Text_End"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ScheduleEventScreen_EditText_Start"
        app:layout_constraintStart_toStartOf="@+id/ScheduleEventScreen_Text_Title"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleEventScreen_EditText_End" />

    <TextView
        android:id="@+id/ScheduleEventScreen_Text_MaxPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ScheduleEventScreen_Text_Max"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ScheduleEventScreen_EditText_Max"
        app:layout_constraintStart_toStartOf="@+id/ScheduleEventScreen_Text_Title"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleEventScreen_EditText_Start" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ScheduleEventScreen_Button_Submit"
        app:layout_constraintBaseline_toBaselineOf="@+id/ScheduleEventScreen_Quit"
        app:layout_constraintEnd_toStartOf="@+id/ScheduleEventScreen_Quit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ScheduleEventScreen_EditText_Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/ScheduleEventScreen_EditText_Start"
        app:layout_constraintBottom_toTopOf="@+id/ScheduleEventScreen_Text_MaxPlayer"
        app:layout_constraintStart_toStartOf="@+id/ScheduleEventScreen_Text_Title"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleEventScreen_Text_End" />

    <EditText
        android:id="@+id/ScheduleEventScreen_EditText_Max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/ScheduleEventScreen_EditText_Max"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/ScheduleEventScreen_Text_Title"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleEventScreen_Text_MaxPlayer" />


</androidx.constraintlayout.widget.ConstraintLayout>