<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerLoginScreen">

    <TextView
        android:id="@+id/textView_CustomerSignUpPage_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/CustomerLoginScreen_title"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView_CustomerSignUpPage_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/CustomerLoginScreen_password"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_CustomerSignUpPage_Username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_CustomerSignUpPage_Username"
        app:layout_constraintTop_toBottomOf="@+id/editText_CustomerLoginPage_Username" />

    <EditText
        android:id="@+id/editText_CustomerLoginPage_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/CustomerLoginScreen_enter_password"
        android:inputType="textPersonName"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/editText_CustomerLoginPage_Username"
        app:layout_constraintStart_toStartOf="@+id/editText_CustomerLoginPage_Username"
        app:layout_constraintTop_toBottomOf="@+id/textView_CustomerSignUpPage_Password" />

    <EditText
        android:id="@+id/editText_CustomerLoginPage_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/CustomerLoginScreen_enter_username"
        android:inputType="textPersonName"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/textView_CustomerSignUpPage_Username"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/textView_CustomerSignUpPage_Username"
        app:layout_constraintTop_toBottomOf="@+id/textView_CustomerSignUpPage_Username" />

    <TextView
        android:id="@+id/textView_CustomerSignUpPage_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/CustomerLoginScreen_username"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_CustomerSignUpPage_Title" />

    <Button
        android:id="@+id/button_CustomerLoginPage_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/CustomerLoginScreen_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_CustomerLoginPage_Password"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_CustomerLoginPage_GoToAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/CustomerLoginScreen_login_as_an_admin"
        app:layout_constraintEnd_toEndOf="@+id/button_CustomerLoginPage_Login"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/button_CustomerLoginPage_Login"
        app:layout_constraintTop_toBottomOf="@+id/button_CustomerLoginPage_Login" />

    <Button
        android:id="@+id/button_CustomerLoginPage_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayCustomerSignUpScreen"
        android:text="@string/CustomerLoginScreen_register_customer_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_CustomerLoginPage_GoToAdmin"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/button_CustomerLoginPage_GoToAdmin"
        app:layout_constraintTop_toBottomOf="@+id/button_CustomerLoginPage_GoToAdmin"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_CustomerLoginPage_Quit"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:onClick="quitApp"
        android:text="@string/CustomerLoginScreen_quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>